Refactoring. Using yml.